--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.22",
+    "@ai-sdk/openai": "^1.3.23",
     "@hono/node-server": "^1.14.4",
     "@supabase/supabase-js": "^2.52.1",
+    "ai": "^4.3.19",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.8.2",
     "pg": "^8.14.1",
     "postgres": "^3.4.7",
-    "zod": "^4.0.2"
+    "zod": "3.25.76"
   },
   "trustedDependencies": [
     "supabase"
