--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsdown",
     "check-types": "tsc -b",
-    "compile": "tsc && tsc-alias",
+    "compile": "tsc && tsc-alias && node appendJsExtensions.js",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "db:push": "drizzle-kit push",
