i understand it now

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-  "version": 2,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/src/index.ts",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+      "source": "/api/(.*)",
+      "destination": "/api"
     }
+  ],
+  "redirects": [
+    { "source": "/", "destination": "/api", "permanent": false }
   ]
 }
