--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "server",
-  "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "tsdown",
-    "check-types": "tsc -b",
-    "compile": "tsc && tsc-alias && node appendJsExtensions.js",
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "start": "vercel dev",
+    "deploy": "vercel",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
@@ -30,6 +25,7 @@
     "supabase"
   ],
   "devDependencies": {
+    "vercel": "^32.4.1",
     "@types/node": "^22.13.11",
     "@types/pg": "^8.11.11",
     "drizzle-kit": "^0.31.2",
